--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "id": "2fa1656e",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "id": "88f81e4b",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
    "id": "4ed4de67",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "id": "b77e17bf",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "id": "aa070290",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "id": "a8437069",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "id": "106e157d",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "id": "ce0c4c76",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "id": "2e06b990",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "id": "b4ed9a6f",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "id": "cf932e6a",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "id": "ba7f3002",
    "metadata": {},
    "outputs": [
@@ -445,6 +445,472 @@
     "\n",
     "result = df[df['Traffic_check']=='Traffic_High']['Violent'].mean()\n",
     "print(round(result, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a71b8eb",
+   "metadata": {},
+   "source": [
+    "📝 실전 연습 문제 (약점 보완 & 문자열)\n",
+    "문제 1. (문자열 추출 & 빈도 분석) Product 컬럼에는 대괄호 [ ... ] 안에 제품의 옵션 정보가 들어있습니다. (예: [Black]) 정규표현식을 사용하여 이 옵션 텍스트만 추출(괄호 제외)하여 Option이라는 새 컬럼을 만드세요. 가장 많이 판매된(행 개수 기준) Option의 이름을 출력하시오.\n",
+    "\n",
+    "문제 2. (그룹별 결측치 처리 & 평균 계산) Price 컬럼의 결측치를 **Category별 Price의 평균값(mean)**으로 채우세요. (주의: 전체 평균이 아니라, Electronics는 Electronics끼리, Accessories는 Accessories끼리 평균을 구해서 채워야 합니다.) 결측치 처리가 완료된 후, Price의 **표준편차(std)**를 구하시오. (단, 소수점 이하는 버리고 **정수(int)**로 출력하시오.)\n",
+    "\n",
+    "문제 3. (시계열 집계 & 이상치 범위 - 지난번 실수 복습) 일별 매출액(Daily_Sales)을 계산하려고 합니다. (매출액 = Price * Quantity, 결측치 처리된 Price 사용) 날짜(Date)별로 총 매출액을 집계한 뒤, 총 매출액이 **상위 10% 이상(>= 0.9 quantile)**인 날짜들을 **'High_Sales_Day'**로 정의합니다. 이 'High_Sales_Day'에 해당하는 날들의 일평균 매출액을 구하시오. (단, 소수점 이하는 버리고 **정수(int)**로 출력하시오.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "8cefe8ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료! (행: 5000)\n",
+      "        Date             Product     Category      Price  Quantity\n",
+      "0 2023-08-11  Monitor [Wireless]  Electronics  1030000.0         2\n",
+      "1 2023-12-26       Laptop [16GB]  Electronics        NaN         1\n",
+      "2 2023-10-19    Mouse [Wireless]  Accessories   410000.0         4\n",
+      "3 2023-07-24      Laptop [Black]  Electronics   930000.0         1\n",
+      "4 2023-03-09     Monitor [White]  Electronics  1437000.0         4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n_rows = 5000\n",
+    "\n",
+    "# 1. 상품명 생성 (대괄호 안에 옵션 포함)\n",
+    "products_base = ['Laptop', 'Phone', 'Monitor', 'Mouse', 'Keyboard']\n",
+    "options = ['[Black]', '[White]', '[Silver]', '[16GB]', '[Wireless]']\n",
+    "categories = ['Electronics', 'Electronics', 'Electronics', 'Accessories', 'Accessories']\n",
+    "\n",
+    "prod_list = []\n",
+    "cat_list = []\n",
+    "for _ in range(n_rows):\n",
+    "    idx = np.random.randint(0, 5)\n",
+    "    opt_idx = np.random.randint(0, 5)\n",
+    "    # 상품명 예: \"Laptop [Black]\"\n",
+    "    prod_name = f\"{products_base[idx]} {options[opt_idx]}\"\n",
+    "    prod_list.append(prod_name)\n",
+    "    cat_list.append(categories[idx])\n",
+    "\n",
+    "# 2. 데이터 생성\n",
+    "df = pd.DataFrame({\n",
+    "    'Date': np.random.choice(pd.date_range('2023-01-01', '2023-12-31'), n_rows),\n",
+    "    'Product': prod_list,\n",
+    "    'Category': cat_list,\n",
+    "    'Price': np.random.randint(50, 2000, n_rows) * 1000, # 50,000 ~ 2,000,000\n",
+    "    'Quantity': np.random.randint(1, 5, n_rows)\n",
+    "})\n",
+    "\n",
+    "# 3. 결측치 생성 (Price)\n",
+    "df.loc[np.random.choice(df.index, 500), 'Price'] = np.nan\n",
+    "\n",
+    "print(f\"데이터 생성 완료! (행: {df.shape[0]})\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "ca8321de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Black\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1\n",
+    "df['Option'] = df['Product'].str.extract(r'\\[(.*?)\\]')\n",
+    "result = df['Option'].value_counts().sort_values(ascending=False)\n",
+    "print(result.idxmax())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "62786703",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "533145\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 2\n",
+    "fill_val = df.groupby('Category')['Price'].transform('mean')\n",
+    "\n",
+    "df['Price'] = df['Price'].fillna(fill_val)\n",
+    "result = df['Price'].std()\n",
+    "print(int(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b3fe2a60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55587015\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 3\n",
+    "df['Revenue'] = df['Price'] * df['Quantity']\n",
+    "daily_sales = df.groupby('Date')['Revenue'].sum()\n",
+    "#print(daily_sales)\n",
+    "\n",
+    "var = daily_sales.quantile(0.9)\n",
+    "high_sales_days = daily_sales[daily_sales >= var]\n",
+    "result = high_sales_days.mean()\n",
+    "print(int(result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c318badb",
+   "metadata": {},
+   "source": [
+    "📝 실전 연습 문제 (데이터셋: Ecommerce_Sales)\n",
+    "문제 1. (문자열 포함 여부 검색) Product 이름에 **'Wireless'**라는 단어가 포함된 상품들만 별도로 분석하려고 합니다. 'Wireless'가 포함된 상품들의 **Price 중앙값(median)**을 구하시오. (단, Price 컬럼의 결측치는 제거(dropna)한 후 계산하고, 결과는 **정수(int)**로 출력하시오.)\n",
+    "\n",
+    "문제 2. (시계열 집계 & 정렬) Date 컬럼에서 '월(Month)' 정보를 추출합니다. 'Electronics' 카테고리에 해당하는 데이터만 필터링한 후, **월별 총 매출액(Price * Quantity)**을 집계했을 때, 매출액이 가장 높은 **월(Month)**은 몇 월입니까? (단, 결측치가 있는 행은 매출액 계산 전 제거하고, 정수로 출력하시오.)\n",
+    "\n",
+    "문제 3. (순위 구하기 & 인덱싱) 전체 데이터(결측치 제거 후)를 Price(가격)가 높은 순서대로 내림차순 정렬합니다. 이때, 가격이 5번째로 높은 주문의 **Order_ID**는 무엇입니까? (주의: 0부터 시작하는 인덱스 기준이 아니라, 실제 순위 기준 5등입니다. 동점자는 무시하고 행 순서대로 처리합니다.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "f0050a48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Date             Product     Category         Price  Quantity  \\\n",
+      "0 2023-08-11  Monitor [Wireless]  Electronics  1.030000e+06         2   \n",
+      "1 2023-12-26       Laptop [16GB]  Electronics  1.022305e+06         1   \n",
+      "2 2023-10-19    Mouse [Wireless]  Accessories  4.100000e+05         4   \n",
+      "3 2023-07-24      Laptop [Black]  Electronics  9.300000e+05         1   \n",
+      "4 2023-03-09     Monitor [White]  Electronics  1.437000e+06         4   \n",
+      "\n",
+      "     Option       Revenue  \n",
+      "0  Wireless  2.060000e+06  \n",
+      "1      16GB  1.022305e+06  \n",
+      "2  Wireless  1.640000e+06  \n",
+      "3     Black  9.300000e+05  \n",
+      "4     White  5.748000e+06  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "c49c47b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1022305\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1\n",
+    "q1 = df.dropna(subset=['Price'])\n",
+    "result = q1[q1['Product'].str.contains('Wireless')]['Price'].median()\n",
+    "print(int(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "087ea252",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_5228\\3975182502.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  q1['Revenue'] = q1['Price'] * q1['Quantity']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 2\n",
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "df['Month'] = df['Date'].dt.month\n",
+    "\n",
+    "q1 = df[df['Category']=='Electronics']\n",
+    "q1['Revenue'] = q1['Price'] * q1['Quantity']\n",
+    "result = q1.groupby('Month')['Revenue'].sum().sort_values(ascending=False)\n",
+    "print(result.idxmax())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "19a63283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date        2023-11-20 00:00:00\n",
+      "Product      Monitor [Wireless]\n",
+      "Category            Electronics\n",
+      "Price                 1998000.0\n",
+      "Quantity                      3\n",
+      "Option                 Wireless\n",
+      "Revenue               5994000.0\n",
+      "Month                        11\n",
+      "Name: 2770, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 3\n",
+    "df = df.dropna(subset=['Price'])\n",
+    "df = df.sort_values(by='Price', ascending=False)\n",
+    "print(df.iloc[4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6287f64d",
+   "metadata": {},
+   "source": [
+    "📝 [제2유형] 은행 고객 이탈 예측\n",
+    "문제: 은행 고객 데이터(train)를 이용하여 고객의 이탈 여부(Exited)를 예측하는 모델을 만들고, 제공된 평가용 데이터(test)에 대한 예측 결과를 csv 파일로 제출하시오.\n",
+    "\n",
+    "1. 데이터 설명\n",
+    "\n",
+    "Target: Exited (1: 이탈, 0: 유지)\n",
+    "\n",
+    "Features:\n",
+    "\n",
+    "CustomerId: 고객 ID (식별자)\n",
+    "\n",
+    "Surname: 성 (String)\n",
+    "\n",
+    "CreditScore: 신용 점수\n",
+    "\n",
+    "Geography: 국가 (France, Germany, Spain)\n",
+    "\n",
+    "Gender: 성별\n",
+    "\n",
+    "Age, Tenure, Balance, NumOfProducts, HasCrCard, IsActiveMember, EstimatedSalary\n",
+    "\n",
+    "2. 제출 형식\n",
+    "\n",
+    "result.csv 파일로 저장해야 합니다.\n",
+    "\n",
+    "반드시 **CustomerId**와 Exited 두 개의 컬럼만 포함해야 합니다.\n",
+    "\n",
+    "Exited 컬럼에는 **이탈할 확률(Probability)**을 제출하시오. (0과 1 사이의 소수)\n",
+    "\n",
+    "3. 평가 지표\n",
+    "\n",
+    "ROC-AUC (값이 클수록 좋음)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "c2a02fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "train shape: (2100, 13)\n",
+      "test shape: (900, 12)\n",
+      "   CustomerId   Surname  CreditScore Geography  Gender   Age  Tenure  \\\n",
+      "0       10001  Williams          423    France    Male  43.0       5   \n",
+      "1       10002     Jones          532   Germany  Female  54.0       9   \n",
+      "2       10003     Smith          470     Spain    Male  75.0       8   \n",
+      "3       10004     Brown          627   Germany  Female  81.0       0   \n",
+      "4       10005     Brown          520     Spain    Male  67.0       5   \n",
+      "\n",
+      "         Balance  NumOfProducts  HasCrCard  IsActiveMember  EstimatedSalary  \\\n",
+      "0  156207.782854              3          0               0     61837.658280   \n",
+      "1  149914.101471              2          1               1     54490.748664   \n",
+      "2  132768.028528              3          0               1    126846.371424   \n",
+      "3   44238.586796              1          0               0    172944.034041   \n",
+      "4  105158.756047              2          1               1     58251.970535   \n",
+      "\n",
+      "   Exited  \n",
+      "0       0  \n",
+      "1       0  \n",
+      "2       0  \n",
+      "3       0  \n",
+      "4       1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n_rows = 3000\n",
+    "\n",
+    "# 1. 데이터 생성\n",
+    "data = {\n",
+    "    'CustomerId': np.arange(10001, 10001 + n_rows),\n",
+    "    'Surname': np.random.choice(['Smith', 'Johnson', 'Williams', 'Brown', 'Jones'], n_rows),\n",
+    "    'CreditScore': np.random.randint(350, 850, n_rows),\n",
+    "    'Geography': np.random.choice(['France', 'Germany', 'Spain'], n_rows),\n",
+    "    'Gender': np.random.choice(['Male', 'Female'], n_rows),\n",
+    "    'Age': np.random.randint(18, 92, n_rows),\n",
+    "    'Tenure': np.random.randint(0, 10, n_rows),\n",
+    "    'Balance': np.random.uniform(0, 250000, n_rows),\n",
+    "    'NumOfProducts': np.random.randint(1, 4, n_rows),\n",
+    "    'HasCrCard': np.random.randint(0, 2, n_rows),\n",
+    "    'IsActiveMember': np.random.randint(0, 2, n_rows),\n",
+    "    'EstimatedSalary': np.random.uniform(11, 200000, n_rows),\n",
+    "    'Exited': np.random.randint(0, 2, n_rows) # Target\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 2. 결측치 및 이상치 강제 주입 (전처리 연습용)\n",
+    "# Age 결측치\n",
+    "df.loc[np.random.choice(df.index, 50), 'Age'] = np.nan\n",
+    "# Balance 결측치\n",
+    "df.loc[np.random.choice(df.index, 30), 'Balance'] = np.nan\n",
+    "\n",
+    "# 3. Train / Test 분리 (시험 환경 흉내)\n",
+    "X = df.drop('Exited', axis=1)\n",
+    "y = df['Exited']\n",
+    "\n",
+    "# 실제 시험에서는 X_test에 정답(y)이 없습니다.\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# 데이터프레임 합치기 (시험에서 제공되는 형태)\n",
+    "train = pd.concat([X_train, y_train], axis=1)\n",
+    "test = X_test # y_test는 숨겨져 있음 (채점용)\n",
+    "\n",
+    "# CSV 파일로 저장되었다고 가정하고 변수명만 사용합니다.\n",
+    "print(f\"데이터 생성 완료!\")\n",
+    "print(f\"train shape: {train.shape}\")\n",
+    "print(f\"test shape: {test.shape}\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "fdd15584",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.551\n",
+      "      Id  pred\n",
+      "0  11802     1\n",
+      "1  11191     1\n",
+      "2  11818     1\n",
+      "3  10252     1\n",
+      "4  12506     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(train.info())\n",
+    "# 결측치: Age, Balance\n",
+    "# object: Geography, Gender\n",
+    "\n",
+    "#print(test.info())\n",
+    "# 결측치: Age, Balance\n",
+    "\n",
+    "train['Age'] = train['Age'].fillna(train['Age'].mean())\n",
+    "test['Age'] = test['Age'].fillna(train['Age'].mean())\n",
+    "\n",
+    "train['Balance'] = train['Balance'].fillna(train['Balance'].mean())\n",
+    "test['Balance'] = test['Balance'].fillna(train['Balance'].mean())\n",
+    "\n",
+    "#print(test.info())\n",
+    "\n",
+    "X = train.drop(['CustomerId', 'Surname', 'Exited'], axis=1)\n",
+    "y = train['Exited']\n",
+    "X_submit = test.drop(['CustomerId', 'Surname'], axis=1)\n",
+    "\n",
+    "cols = ['Geography', 'Gender']\n",
+    "\n",
+    "X = pd.get_dummies(X, columns=cols)\n",
+    "X_submit = pd.get_dummies(X_submit, columns=cols)\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "model = RandomForestClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "pred_proba = model.predict_proba(X_val)[:, 1]\n",
+    "\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "roc = roc_auc_score(y_val, pred_proba)\n",
+    "print(round(roc, 3))\n",
+    "\n",
+    "model.fit(X, y)\n",
+    "final_pred = model.predict(X_submit)\n",
+    "\n",
+    "result = pd.DataFrame({\n",
+    "    'Id': test['CustomerId'],\n",
+    "    'pred': final_pred\n",
+    "})\n",
+    "result.to_csv('result.csv', index=False)\n",
+    "print(pd.read_csv('result.csv').head())\n",
+    "\n"
    ]
   }
  ],
