--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -912,6 +912,326 @@
     "print(pd.read_csv('result.csv').head())\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "491b8524",
+   "metadata": {},
+   "source": [
+    "📝 [제2유형] 자전거 대여량 예측 (회귀)\n",
+    "문제: 제공된 자전거 대여 데이터(train)를 이용하여 대여 횟수(count)를 예측하는 모델을 만들고, 평가용 데이터(test)에 대한 예측 결과를 csv 파일로 제출하시오.\n",
+    "\n",
+    "1. 데이터 설명\n",
+    "\n",
+    "Target: count (대여 횟수, 수치형)\n",
+    "\n",
+    "Features:\n",
+    "\n",
+    "ID: 고유 식별자\n",
+    "\n",
+    "Date: 날짜 (datetime)\n",
+    "\n",
+    "Temperature, Humidity, Windspeed, Visibility: 날씨 정보\n",
+    "\n",
+    "Holiday: 공휴일 여부 (Yes/No)\n",
+    "\n",
+    "Hour: 시간 (0~23)\n",
+    "\n",
+    "2. 제출 형식\n",
+    "\n",
+    "result.csv 파일로 저장해야 합니다.\n",
+    "\n",
+    "**ID**와 pred 두 개의 컬럼만 존재해야 합니다.\n",
+    "\n",
+    "pred 컬럼에는 예측한 대여 횟수(실수 또는 정수)를 입력하시오.\n",
+    "\n",
+    "3. 평가 지표\n",
+    "\n",
+    "MAE (Mean Absolute Error)\n",
+    "\n",
+    "(값이 작을수록 좋은 성능입니다.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "9bcb496c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "train shape: (1400, 9)\n",
+      "test shape: (600, 8)\n",
+      "        ID                Date  Temperature  Humidity  Windspeed  Visibility  \\\n",
+      "836   1836 2023-02-04 20:00:00    27.741598        39   4.947782         836   \n",
+      "575   1575 2023-01-24 23:00:00    20.760819        80        NaN        1787   \n",
+      "557   1557 2023-01-24 05:00:00    15.534825        61   2.401177        1261   \n",
+      "1235  2235 2023-02-21 11:00:00    26.003205        64   7.495187         971   \n",
+      "1360  2360 2023-02-26 16:00:00    18.989828        52   0.973485         958   \n",
+      "\n",
+      "     Holiday  Hour  count  \n",
+      "836       No    14    205  \n",
+      "575       No     5    153  \n",
+      "557       No    10    204  \n",
+      "1235      No     7    152  \n",
+      "1360      No     8    138  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n_rows = 2000\n",
+    "\n",
+    "# 1. 데이터 생성\n",
+    "data = {\n",
+    "    'ID': np.arange(1000, 1000 + n_rows),\n",
+    "    'Date': pd.date_range('2023-01-01', periods=n_rows, freq='h'),\n",
+    "    'Temperature': np.random.normal(20, 5, n_rows), # 기온\n",
+    "    'Humidity': np.random.randint(30, 90, n_rows),  # 습도\n",
+    "    'Windspeed': np.random.uniform(0, 10, n_rows),  # 풍속\n",
+    "    'Visibility': np.random.randint(500, 2000, n_rows), # 가시거리\n",
+    "    'Holiday': np.random.choice(['No', 'Yes'], n_rows, p=[0.95, 0.05]), # 공휴일\n",
+    "    'Hour': np.random.randint(0, 24, n_rows), # 시간\n",
+    "    'count': 0 # Target 초기화\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Target 생성 (대여량은 기온이 높고, 퇴근시간에 많다는 가정)\n",
+    "df['count'] = 100 + (df['Temperature'] * 3) + (df['Hour'] * 5) - (df['Humidity'] * 0.5)\n",
+    "df['count'] = df['count'] + np.random.normal(0, 20, n_rows) # 노이즈 추가\n",
+    "df['count'] = df['count'].apply(lambda x: max(0, int(x))) # 음수 방지 및 정수화\n",
+    "\n",
+    "# 2. 결측치 주입 (전처리 연습용)\n",
+    "df.loc[np.random.choice(df.index, 50), 'Windspeed'] = np.nan\n",
+    "\n",
+    "# 3. Train / Test 분리\n",
+    "X = df.drop('count', axis=1)\n",
+    "y = df['count']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "train = pd.concat([X_train, y_train], axis=1)\n",
+    "test = X_test\n",
+    "\n",
+    "print(f\"데이터 생성 완료!\")\n",
+    "print(f\"train shape: {train.shape}\")\n",
+    "print(f\"test shape: {test.shape}\")\n",
+    "print(train.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "13724801",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.449\n",
+      "     ID    pred\n",
+      "0  2860  127.66\n",
+      "1  1353  118.44\n",
+      "2  2333  182.31\n",
+      "3  1905  221.30\n",
+      "4  2289  205.26\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(test.info())\n",
+    "# 결측치: windspeed\n",
+    "# 인코딩: Holiday\n",
+    "# 삭제: ID, Date\n",
+    "\n",
+    "train['Windspeed'] = train['Windspeed'].fillna(train['Windspeed'].mean())\n",
+    "test['Windspeed'] = test['Windspeed'].fillna(train['Windspeed'].mean())\n",
+    "\n",
+    "X = train.drop(['ID', 'Date', 'count'], axis=1)\n",
+    "y = train['count']\n",
+    "X_submit = test.drop(['ID', 'Date'], axis=1)\n",
+    "\n",
+    "X = pd.get_dummies(X, columns=['Holiday'])\n",
+    "X_submit = pd.get_dummies(X_submit, columns=['Holiday'])\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2)\n",
+    "model = RandomForestRegressor(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "pred = model.predict(X_val)\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "pred_val = mean_absolute_error(y_val, pred)\n",
+    "print(round(pred_val, 3))\n",
+    "\n",
+    "model.fit(X, y)\n",
+    "final_pred = model.predict(X_submit)\n",
+    "\n",
+    "result = pd.DataFrame({\n",
+    "    'ID': test['ID'],\n",
+    "    'pred': final_pred\n",
+    "})\n",
+    "result.to_csv('result1.csv', index=False)\n",
+    "print(pd.read_csv('result1.csv').head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45360579",
+   "metadata": {},
+   "source": [
+    "📝 [제3유형] 통계적 가설 검정\n",
+    "문제 1. (대응표본 t-검정) 'Treatment'(투약군) 그룹에 속한 환자들의 **투약 전(BP_Pre)**과 투약 후(BP_Post) 혈압 차이가 유의미한지 검정하려고 합니다. (가설: 투약 후 혈압이 투약 전과 다르다.) **대응표본 t-검정(Paired t-test)**을 수행하고, **검정통계량(t-value)**을 구하시오. (단, 반올림하여 소수 셋째 자리까지 출력하시오.)\n",
+    "\n",
+    "문제 2. (카이제곱 독립성 검정) 투여 그룹(Group)과 부작용 발생 여부(Side_Effects)가 서로 관련이 있는지(독립이 아닌지) 검정하려고 합니다. 카이제곱 독립성 검정을 수행하고, **p-값(p-value)**을 구하시오. (단, 반올림하여 소수 넷째 자리까지 출력하시오.)\n",
+    "\n",
+    "문제 3. (로지스틱 회귀분석 & 오즈비) 치료 성공 여부(Success)를 종속변수로 하고, Age와 BMI를 독립변수로 하는 로지스틱 회귀분석을 수행하시오. 이때 **BMI 변수의 오즈비(Odds Ratio)**를 구하시오. (단, statsmodels를 사용하고, 결과값은 반올림하여 소수 셋째 자리까지 출력하시오.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "75ccdee3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "   ID      Group  Age        BMI      BP_Pre Side_Effects     BP_Post  Success\n",
+      "0   1  Treatment   49  25.536214  115.545523          Yes  107.602568        0\n",
+      "1   2  Treatment   75  25.708310  118.339493           No  114.446628        0\n",
+      "2   3  Treatment   45  25.510836  115.130393           No  114.998380        0\n",
+      "3   4  Treatment   29  27.439367  128.171946           No  125.530657        0\n",
+      "4   5  Treatment   32  19.326160  129.338332           No  119.815970        0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n = 300\n",
+    "\n",
+    "data = {\n",
+    "    'ID': range(1, n + 1),\n",
+    "    'Group': np.random.choice(['Treatment', 'Control'], n),\n",
+    "    'Age': np.random.randint(25, 80, n),\n",
+    "    'BMI': np.random.normal(25, 4, n),\n",
+    "    'BP_Pre': np.random.normal(130, 10, n),\n",
+    "    'Side_Effects': np.random.choice(['Yes', 'No'], n, p=[0.15, 0.85])\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 투약 후 혈압 생성 (Treatment 그룹만 혈압이 떨어지는 효과 부여)\n",
+    "def get_bp_post(row):\n",
+    "    change = np.random.normal(-5, 5) if row['Group'] == 'Treatment' else np.random.normal(0, 3)\n",
+    "    return row['BP_Pre'] + change\n",
+    "\n",
+    "df['BP_Post'] = df.apply(get_bp_post, axis=1)\n",
+    "\n",
+    "# 치료 성공 여부 (BMI가 낮을수록, 나이가 적을수록 성공 확률 높음)\n",
+    "logits = 2 - 0.1 * df['BMI'] - 0.02 * df['Age'] + np.random.normal(0, 1, n)\n",
+    "probs = 1 / (1 + np.exp(-logits))\n",
+    "df['Success'] = np.random.binomial(1, probs)\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "9674ec91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.205\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1\n",
+    "target_df = df[df['Group']=='Treatment']\n",
+    "before = target_df['BP_Pre']\n",
+    "after = target_df['BP_Post']\n",
+    "\n",
+    "from scipy.stats import ttest_rel\n",
+    "t_stat, p_val = ttest_rel(before, after)\n",
+    "print(round(t_stat, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "87fb4fe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.283\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 2\n",
+    "from scipy.stats import chi2_contingency\n",
+    "group = df['Group']\n",
+    "side_effects = df['Side_Effects']\n",
+    "\n",
+    "ct = pd.crosstab(group, side_effects)\n",
+    "\n",
+    "chi2, p_val, ddof, expected = chi2_contingency(ct)\n",
+    "print(round(p_val, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5184f4f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.465692\n",
+      "         Iterations 6\n",
+      "0.939\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 3\n",
+    "from statsmodels.formula.api import logit\n",
+    "model = logit('Success ~ Age + BMI', data=df).fit()\n",
+    "#print(model.summary())\n",
+    "\n",
+    "import numpy as np\n",
+    "odds_ratio = np.exp(model.params['BMI'])\n",
+    "print(round(odds_ratio, 3))\n",
+    "# 3번 model에서 summary 읽는 법과 오즈비에 대해서 설명, 시험용 코드로도 정리. 시험 문제 중 \"PlanType이 1인 고객이 0인 고객보다 이탈할 오즈비를 구하시오. / 이탈 확률이 0.3 이상인 고객 수를 구하시오.\" 등은 어떻게 해야하는지 예를 들어서 설명"
+   ]
   }
  ],
  "metadata": {
